-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b89
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8142612 | emb-9 | Roland Westrelin | P2 | Resolved | Fixed | team |
In some cases, a Store that is moved out of loop by a try_move_store_before_loop(), is input to a MergeMem that itself is input to a bottom memory Phi for the loop. The loop has an exit point before the Store. That exit point uses the bottom memory Phi as memory state. Moving the Store out of loop shouldn't be attempted in that case.
- backported by
-
JDK-8142612 PhaseIdealLoop::try_move_store_before_loop() may bypass early loop exit
-
- Resolved
-
- relates to
-
JDK-8080289 Intermediate writes in a loop not eliminated by optimizer
-
- Resolved
-