8136461: PhaseIdealLoop::try_move_store_before_loop() may bypass early loop exit

PhaseIdealLoop::try_move_store_before_loop() needs to check for early loop exit before candidate Stores

Reviewed-by: kvn